--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,9 @@ jobs:
         run: npm install
 
       - name: Build the site
-        run: npx eleventy
+        run: npm run build  # Adjust this command to match your build script
+        env:
+          BASE_URL: "/SynthCodeLab"  # Replace with your repository name
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
